# workflow

./: CMakeLists.txt  abstract_factory.h  block_creators.cpp  block_creators.h  blocks.cpp  blocks.h  buffer.h  creator.h  dynamic_array.h  exceptions.h  factory.cpp  factory.h  main.cpp  worker.h  workflow.cpp  workflow.h
configs-examples/: config0.txt  config0_1.txt  config1.txt  config1_1.txt  config1_2.txt  config1_3.txt  config1_4.txt  config2.txt  config2_1.txt  config2_2.txt
tests/: blocks_test.cpp  dynamic_array_test.cpp  file1.txt  file2.txt  file3.txt  file4.txt  input.txt  workflow_test.cpp
